# scan-primary-mirror

./: Cargo.toml  LICENSE  README.rst
.github/workflows/: ci.yml
examples/: config.toml
src/: debug.rs  main.rs  scan_primary_mirror_test.rs  settings.rs  xml.rs
src/db/: functions.rs  models.rs  schema.rs
test/: database-setup.sql  repomd.xml  test-CHECKSUM
tests/: test_cargo.bats
