[package]
name = "scan-primary-mirror"
version = "0.4.2"
authors = ["Adrian Reber <adrian@lisas.de>"]
edition = "2018"

[dependencies]
regex = "1.7.1"
chrono = "0.4"
dotenv = "0.15.0"
getopts = "0.2"
diesel = { version = "2.0.2", features = ["postgres"] }
prettytable-rs = "0.10"
console = "0.15.2"
serde = { version = "1", features = ["derive"] }
serde_derive = "1.0.125"
serde_json = "1"
derivative = "2.2.0"
config = { version = "0.13", features = ["toml"] }
reqwest = { version = "0.11.13", default-features = false, features = ["blocking", "rustls-tls"] }
serde-xml-rs = "0.6.0"
md-5 = "0.10.5"
sha-1 = "0.10.1"
sha2 = "0.10.6"
walkdir = "2"
glob = "0.3.1"
memmap = "0.7.0"
