[package]
name = "scan-primary-mirror"
version = "0.4.3"
authors = ["Adrian Reber <adrian@lisas.de>"]
edition = "2018"

[dependencies]
regex = "1.12.2"
chrono = "0.4"
dotenv = "0.15.0"
getopts = "0.2"
diesel = { version = "2.3.6", features = ["postgres"] }
prettytable-rs = "0.10"
console = "0.16.2"
serde = { version = "1", features = ["derive"] }
serde_derive = "1.0.125"
serde_json = "1"
derivative = "2.2.0"
config = { version = "0.15", features = ["toml"] }
reqwest = { version = "0.12.26", default-features = false, features = ["blocking", "rustls-tls"] }
serde-xml-rs = "0.8.1"
md-5 = "0.10.6"
sha-1 = "0.10.1"
sha2 = "0.10.9"
walkdir = "2"
glob = "0.3.3"
memmap = "0.7.0"
